--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "sample-project",
-  "version": "0.0.0",
-  "description": "",
+  "version": "1.0.0",
+  "description": "sample-project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "mitomex",
-  "license": "ISC",
+  "author": "kozaru",
+  "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-stylus": "^2.0.1"
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-sass": "^2.1.1"
   }
 }
